--- a/draw_glyph.html
+++ b/draw_glyph.html
@@ -7,38 +7,6 @@
 	</head>
 	<body>
 		<h1>Draw glyph</h1>
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="308" height="308" id="calibration_grid" >
-		  <g transform="matrix(7,0,0,7,154,154)">
-			<circle id="anchor0" cx="0" cy="0" r="1" style="stroke:#000000;stroke-width:0.1;fill:#e6e6e6" />
-			<use id="anchor1" xlink:href="#anchor0" x="8.6602535" y="-5"/>
-			<use id="anchor2" xlink:href="#anchor0" y="5" x="8.6602535"/>
-			<use id="anchor3" xlink:href="#anchor0" x="-8.6602535" y="5"/>
-			<use id="anchor4" xlink:href="#anchor0" y="-5" x="-8.6602535"/>
-			<use id="anchor5" xlink:href="#anchor0" x="0" y="-20"/>
-			<use id="anchor6" xlink:href="#anchor0" y="-10" x="17.320507"/>
-			<use id="anchor7" xlink:href="#anchor0" x="17.320507" y="10"/>
-			<use id="anchor8" xlink:href="#anchor0" x="0" y="20"/>
-			<use id="anchor9" xlink:href="#anchor0" y="10" x="-17.320507"/>
-			<use id="anchor10" xlink:href="#anchor0" x="-17.320507" y="-10"/>
-		  </g>
-		</svg>	
-		<p>end</p>
-		<object  width="308" height="308">
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="308" height="308" id="calibration_grid" >
-		  <g transform="matrix(7,0,0,7,154,154)">
-			<circle id="anchor0" cx="0" cy="0" r="1" style="stroke:#000000;stroke-width:0.1;fill:#e6e6e6" />
-			<use id="anchor1" xlink:href="#anchor0" x="8.6602535" y="-5"/>
-			<use id="anchor2" xlink:href="#anchor0" y="5" x="8.6602535"/>
-			<use id="anchor3" xlink:href="#anchor0" x="-8.6602535" y="5"/>
-			<use id="anchor4" xlink:href="#anchor0" y="-5" x="-8.6602535"/>
-			<use id="anchor5" xlink:href="#anchor0" x="0" y="-20"/>
-			<use id="anchor6" xlink:href="#anchor0" y="-10" x="17.320507"/>
-			<use id="anchor7" xlink:href="#anchor0" x="17.320507" y="10"/>
-			<use id="anchor8" xlink:href="#anchor0" x="0" y="20"/>
-			<use id="anchor9" xlink:href="#anchor0" y="10" x="-17.320507"/>
-			<use id="anchor10" xlink:href="#anchor0" x="-17.320507" y="-10"/>
-		  </g>
-		</svg>
-		</object>
+		<canvas id="draw_glyph />
 	</body>
 </html>
