Too much things done. Almost ready. Need to update glyph_seq.js

--- a/draw_glyph.html
+++ b/draw_glyph.html
@@ -3,10 +3,25 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<title>Glyph draw test</title>
+		<link rel="stylesheet" type="text/css" href="glyph.css">
+		<script src="./glyph_seq.js"></script>
+		<script type='text/javascript' src='./glyph.js'></script>
 		<script type='text/javascript' src='./draw_glyph.js'></script>
 	</head>
 	<body>
-		<h1>Draw glyph</h1>
-		<canvas id="draw_glyph />
+		<form id="glyph_form" action="#">
+			<h1>Draw glyph</h1>
+			<canvas name="glyph" id="draw_glyph" width="150" height="150"></canvas><br />
+			<label for="name" accesskey="n">Name</label> <input name="name" id="name" type="text" required="yes"/><br />
+			<label for="name" accesskey="n">JSON string</label><input name="json" id="json" type="text" readonly="readonly" /><br />
+			<input type="submit"/><input type="reset"/>
+		</form>
+		<div id="glyph_seq">
+		</div>
+		<div id="glyph_seq_js">
+			<span>var glyph_sequence = [</span><br />
+			<div id="glyph_seq_js.content"></div>
+			<span>];</span>
+		</div>
 	</body>
 </html>
