--- a/messages/1.html
+++ b/messages/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Glyph draw test</title>
+		<title>Message 1</title>
 		<link rel="stylesheet" type="text/css" href="../glyph.css">
 		<script type='text/javascript' src='../glyph.js'></script>
 		<script type='text/javascript'>
